--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,32 @@
-alabaster==0.7.12
-Flask==1.0.2
-Flask-Cors==3.0.7
-jsonschema==2.6.0
-numpy==1.15.4
-pandas==0.23.4
-scikit-learn==0.20.1
-seaborn==0.9.0
-
+attrs==21.2.0
+certifi==2020.12.5
+chardet==4.0.0
+click==8.0.0
+cycler==0.10.0
+Flask==2.0.0
+idna==2.10
+itsdangerous==2.0.1
+Jinja2==3.0.1
+joblib==1.0.1
+json5==0.9.5
+jsonschema==3.2.0
+kiwisolver==1.3.1
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+numpy==1.20.3
+pandas==1.2.4
+Pillow==8.2.0
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pytz==2021.1
+requests==2.25.1
+scikit-learn==0.24.2
+scipy==1.6.3
+seaborn==0.11.1
+simplegeneric==0.8.1
+six==1.16.0
+sklearn==0.0
+threadpoolctl==2.1.0
+urllib3==1.26.4
+Werkzeug==2.0.1
